# cunqasimulator

./: .gitignore  CMakeLists.txt  README.md  constants.hpp  gate_apply.hpp  gates.hpp  instructions.hpp  instructions_apply.hpp  main  main.cpp  qmio_modules.sh  qpu.hpp  quantumcircuit.hpp
build_mpi/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake
build_mpi/examples/: Makefile  cmake_install.cmake  gate_bench  gate_test  mpi_example
build_mpi/src/: Makefile  cmake_install.cmake
examples/: CMakeLists.txt  example.cpp  example_mpi.sh  gate_benchmarking.cpp  gate_benchmarking.sh  gate_test.cpp  gate_test.sh  mpi_example.cpp  mpi_example.sh  run_test.cpp  run_test.sh  run_test_187792.e  test_183295.e  test_183645.e
examples/threads_benchmarking/: H_Threads_Bench.txt  gate_benchmarking.sh  plot.py
examples/threads_benchmarking/data/: CX_128_Threads_Bench.txt  CX_16_Threads_Bench.txt  CX_256_Threads_Bench.txt  CX_32_Threads_Bench.txt  CX_No_Threads_Bench.txt  CX_Threads_Bench.txt  H_128_Threads_Bench.txt  H_16_Threads_Bench.txt  H_256_Threads_Bench.txt  H_32_Threads_Bench.txt  H_No_Threads_Bench.txt  Measure_128_Threads_Bench.txt  Measure_16_Threads_Bench.txt  Measure_256_Threads_Bench.txt  Measure_32_Threads_Bench.txt  Measure_No_Threads_Bench.txt  Measure_Threads_Bench.txt
src/: CMakeLists.txt  executor.cpp  executor.hpp  implementations.cpp  implementations.hpp  instructions.cpp  instructions.hpp  instructions_apply.hpp  main  main.cpp  mpi_executor.cpp  mpi_executor.hpp  mpi_implementations.cpp  mpi_implementations.hpp  mpi_instructions.cpp  mpi_instructions.hpp  new_mpi_executor.cpp  new_mpi_executor.hpp  new_mpi_implementations.cpp  new_mpi_implementations.hpp  noise.hpp  qpu.hpp  result.hpp  result_cunqasim.cpp  result_cunqasim.hpp
src/utils/: constants_cunqasim.hpp  types_cunqasim.hpp  utils_cunqasim.hpp
utils/: constants.hpp  types.hpp  types_cunqasim.hpp  utils_cunqasim.hpp
